@@ -1,3 +1,9 @@
+2009-07-28  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* intrincs/readcr0.c: New.
+	* Makefile.am: Added intrincs/readcr0.c to the build.
+	* Makefile.in: Regenerated.
+
 2009-07-27  Ozkan Sezer  <sezeroz@gmail.com>
 
 	* intrincs/ilockcxch.c (_InterlockedCompareExchange): Renamed from
